[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Fuente/6809 chargen.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -99.0
margin_right = 150.0
margin_bottom = 99.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -154.0
margin_right = 221.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="Button" parent="."]
pause_mode = 2
margin_left = -35.0
margin_top = 44.0
margin_right = 60.0
margin_bottom = 121.0
text = "+ vida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cura" type="Button" parent="."]
pause_mode = 2
margin_left = 90.6248
margin_top = 44.0
margin_right = 205.625
margin_bottom = 124.0
text = "+ Cura"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energia" type="Button" parent="."]
pause_mode = 2
margin_left = 222.0
margin_top = 43.0
margin_right = 334.0
margin_bottom = 127.0
text = "+ Energia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -1.46115
margin_top = -23.7473
margin_right = 145.539
margin_bottom = -3.74731
custom_fonts/font = SubResource( 1 )
text = "Escoje un bonus"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Vida" to="." method="_on_Vida_button_down"]
[connection signal="button_up" from="Cura" to="." method="_on_Cura_button_up"]
[connection signal="button_up" from="Energia" to="." method="_on_Energia_button_up"]
